--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "jest",
     "build": "webpack",
     "start": "webpack serve --open",
-    "lint:fix": "eslint ./src --fix"
+    "lint": "eslint --ext \".js,.vue\" --ignore-path .gitignore ./src",
+    "lint:fix": "npm run lint -- --fix"
   },
   "jest": {
     "transform": {
@@ -21,7 +22,7 @@
     "@babel/preset-env": "^7.14.4",
     "babel-jest": "^27.0.2",
     "css-loader": "^5.2.6",
-    "eslint": "^7.27.0",
+    "eslint": "^7.28.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.23.4",
