--- a/.eslintrc
+++ b/.eslintrc
@@ -35,6 +35,7 @@
 		"no-underscore-dangle": 0,
 		"no-param-reassign": 0,
 		"linebreak-style": ["warn", "unix"],
+		"implicit-arrow-linebreak": 0,
 		"consistent-return": 0,
 		"operator-linebreak": [2, "after"],
 		"prettier/prettier": [
